public interface DataStructure {
    public Iterator createIterator();
    public void add(String str);
}
