public interface Iterator {
    public Object next();
    public Boolean hasnext();
}
