public class SkipNode{
	public String text;
	public String toString(){
		return "SkipNode:" + text;
	}
	public SkipNode(String str){
		text = str;
	}
}